fixing alignment

--- a/src/home/home.module.css
+++ b/src/home/home.module.css
@@ -44,8 +44,8 @@ div .headline {
 /*Description left block*/
 .descriptionLeft {
   display: inline-block;
-  padding: 100px 50px 100px 0px;
-  width: 50%;
+  padding: 100px 25px 100px 0px;
+  width: 62%;
 }
 
 /*Left block text*/
@@ -64,8 +64,8 @@ div .headline {
 .descriptionRight {
   display: inline-block;
   line-height: 22px;
-  padding: 175px 0px 0px 50px;
-  width: 50%;
+  padding: 175px 0px 0px 25px;
+  width: 38%;
 }
 
 /*Right block text*/
@@ -239,13 +239,13 @@ div .headline {
 .eventsTitle {
   text-align: left;
   grid-area: 1 / 3 / 2 / 6;
-  padding: 0 20px;
+  padding: 0 50px;
 }
 
 /*Big event image grid area*/
 .event1 {
   grid-area: 2 / 3 / 5 / 6;
-  padding: 20px;
+  padding: 0 50px;
 }
 
 /*Big event image size*/
